# libbulk

./: Makefile.am  configure.ac
include/: bulk_mppc_compress.h  bulk_rdp8_compress.h  bulk_rdp8_decompress.h
src/: Makefile.am  bulk_mppc_compress.c  bulk_rdp8_compress.c  bulk_rdp8_decompress.c  getset.h
tests/: Makefile.am  bulktest.c
