EXTRA_DIST =

EXTRA_BULK_MPPC_DEFINES =
EXTRA_BULK_MPPC_INCLUDES =
EXTRA_BULK_MPPC_LIBS =
EXTRA_BULK_MPPC_FLAGS =
EXTRA_BULK_MPPC_COMPRESS_SRC =

AM_CFLAGS = \
  -I../include \
  $(EXTRA_BULK_MPPC_FLAGS)

lib_LTLIBRARIES = libbulkmppccompress.la

libbulkmppccompress_la_LDFLAGS =

libbulkmppccompress_ladir = $(moduledir)

libbulkmppccompress_la_SOURCES = bulk_mppc_compress.c \
$(EXTRA_BULK_MPPC_SRC)

libbulkmppccompress_la_LIBADD =

