EXTRA_DIST =

EXTRA_BULK_DEFINES =
EXTRA_BULK_INCLUDES =
EXTRA_BULK_LIBS =
EXTRA_BULK_FLAGS =

AM_CFLAGS = \
  -I../include \
  $(EXTRA_BULK_FLAGS)

lib_LTLIBRARIES = libbulkmppccompress.la libbulkrdp8decompress.la libbulkrdp8compress.la

# MPPC
libbulkmppccompress_la_LDFLAGS =

libbulkmppccompress_ladir = $(moduledir)

libbulkmppccompress_la_SOURCES = bulk_mppc_compress.c

libbulkmppccompress_la_LIBADD =

# RDP8 decompress
libbulkrdp8decompress_la_LDFLAGS =

libbulkrdp8decompress_ladir = $(moduledir)

libbulkrdp8decompress_la_SOURCES = bulk_rdp8_decompress.c

libbulkrdp8decompress_la_LIBADD =

# RDP8 compress
libbulkrdp8compress_la_LDFLAGS =

libbulkrdp8compress_ladir = $(moduledir)

libbulkrdp8compress_la_SOURCES = bulk_rdp8_compress.c

libbulkrdp8compress_la_LIBADD =

